// Prisma Schema File
// This file defines the database schema using Prisma

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id            String            @id @default(cuid())
  email         String            @unique
  username      String?           @unique
  name          String?
  emailVerified DateTime?
  googleId      String?           @unique
  firstOnboardedAt DateTime?
  completedOnboarding Boolean     @default(false)
  lastLoginAt   DateTime?
  locale        String            @default("en")
  timezone      String            @default("UTC")
  phone         String?
  status        String            @default("active")
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
  workspaceMembers WorkspaceMember[]
  sessions      Session[]

  @@map("users")
}

model Workspace {
  id        String            @id @default(cuid())
  name      String
  slug      String            @unique
  isActive  Boolean           @default(true)
  createdAt DateTime          @default(now())
  updatedAt DateTime          @updatedAt
  members   WorkspaceMember[]
  roles     Role[]
  brands    Brand[]
  subscription Subscription? @relation("WorkspaceSubscription")
  invites   WorkspaceInvite[]

  @@map("workspaces")
}

model WorkspaceMember {
  id          String   @id @default(cuid())
  userId      String
  workspaceId String
  role        WorkspaceRole @default(MEMBER)
  invitedBy   String?
  invitedAt   DateTime?
  joinedAt    DateTime?
  status      String   @default("active")
  createdAt   DateTime @default(now())
  user      User      @relation(fields: [userId], references: [id])
  workspace Workspace @relation(fields: [workspaceId], references: [id])

  @@unique([userId, workspaceId])
  @@map("workspace_members")
}

model Role {
  id           String   @id @default(cuid())
  workspaceId  String?  // null ise global role, doluysa workspace-specific role
  key          String   // örn: "workspace-owner", "content-manager"
  name         String
  description  String?
  builtIn      Boolean  @default(false)
  order        Int      @default(0)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  workspace       Workspace?       @relation(fields: [workspaceId], references: [id])
  rolePermissions RolePermission[]

  @@map("roles")
  @@unique([workspaceId, key]) // aynı workspace içinde aynı key iki kez olmasın, global roller için workspaceId null
}

model Permission {
  id          String   @id @default(cuid())
  key         String   @unique // örn: "workspace:settings.view"
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  rolePermissions RolePermission[]

  @@map("permissions")
}

model RolePermission {
  id           String   @id @default(cuid())
  roleId       String
  permissionId String
  createdAt    DateTime @default(now())
  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@map("role_permissions")
  @@unique([roleId, permissionId])
}

model Session {
  id           String   @id            // refresh token payload'daki `tid` ile birebir
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt    DateTime
  userAgent    String?
  ipAddress    String?
  lastActiveAt DateTime @default(now())
  refreshTokenHash String?
  revokedAt    DateTime?
  createdAt    DateTime @default(now())

  @@map("sessions")
  @@index([userId, expiresAt])
}

model Brand {
  id          String    @id @default(cuid())
  workspaceId String
  name        String
  slug        String
  description String?
  isActive    Boolean   @default(true)
  createdBy   String?
  updatedBy   String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@map("brands")
  @@unique([workspaceId, slug])
  @@index([workspaceId, updatedAt])
}

model Subscription {
  id          String   @id @default(cuid())
  workspaceId String   @unique
  plan        SubscriptionPlan   @default(FREE)
  status      SubscriptionStatus @default(ACTIVE)
  periodStart DateTime?
  periodEnd   DateTime?
  cancelAt    DateTime?

  workspace   Workspace @relation("WorkspaceSubscription", fields: [workspaceId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model WorkspaceInvite {
  id           String   @id @default(cuid())
  email        String
  workspaceId  String
  invitedBy    String
  token        String @unique
  status       InviteStatus @default(PENDING)
  expiresAt    DateTime

  workspace    Workspace @relation(fields: [workspaceId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum WorkspaceRole {
  OWNER
  ADMIN
  MEMBER
}

enum SubscriptionPlan {
  FREE
  PRO
  ENTERPRISE
}

enum SubscriptionStatus {
  ACTIVE
  CANCELED
  PAST_DUE
}

enum InviteStatus {
  PENDING
  ACCEPTED
  EXPIRED
}
