// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// Enums
Enum WorkspaceRole {
  OWNER
  ADMIN
  MEMBER
}

Enum SubscriptionPlan {
  FREE
  PRO
  ENTERPRISE
}

Enum SubscriptionStatus {
  ACTIVE
  CANCELED
  PAST_DUE
}

Enum InviteStatus {
  PENDING
  ACCEPTED
  EXPIRED
}

// Tables
Table users {
  id String [pk, note: 'CUID']
  email String [unique, not null]
  username String [unique]
  name String
  emailVerified DateTime
  googleId String [unique]
  firstOnboardedAt DateTime
  completedOnboarding Boolean [default: false, not null]
  lastLoginAt DateTime
  locale String [default: 'en', not null]
  timezone String [default: 'UTC', not null]
  phone String
  status String [default: 'active', not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table workspaces {
  id String [pk, note: 'CUID']
  name String [not null]
  slug String [unique, not null]
  isActive Boolean [default: true, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table workspace_members {
  id String [pk, note: 'CUID']
  userId String [not null]
  workspaceId String [not null]
  role WorkspaceRole [default: 'MEMBER', not null]
  invitedBy String
  invitedAt DateTime
  joinedAt DateTime
  status String [default: 'active', not null]
  createdAt DateTime [default: `now()`, not null]
  
  indexes {
    (userId, workspaceId) [unique]
  }
}

Table roles {
  id String [pk, note: 'CUID']
  workspaceId String [note: 'null for global roles, workspace-specific if set']
  key String [not null, note: 'e.g., workspace-owner, content-manager']
  name String [not null]
  description String
  builtIn Boolean [default: false, not null]
  order Int [default: 0, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  
  indexes {
    (workspaceId, key) [unique]
  }
}

Table permissions {
  id String [pk, note: 'CUID']
  key String [unique, not null, note: 'e.g., workspace:settings.view']
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table role_permissions {
  id String [pk, note: 'CUID']
  roleId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  
  indexes {
    (roleId, permissionId) [unique]
  }
}

Table sessions {
  id String [pk, note: 'Matches tid in refresh token payload']
  userId String [not null]
  expiresAt DateTime [not null]
  userAgent String
  ipAddress String
  lastActiveAt DateTime [default: `now()`, not null]
  refreshTokenHash String
  revokedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  
  indexes {
    (userId, expiresAt)
  }
}

Table brands {
  id String [pk, note: 'CUID']
  workspaceId String [not null]
  name String [not null]
  slug String [not null]
  description String
  isActive Boolean [default: true, not null]
  createdBy String
  updatedBy String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  
  indexes {
    (workspaceId, slug) [unique]
    (workspaceId, updatedAt)
  }
}

Table Subscription {
  id String [pk, note: 'CUID']
  workspaceId String [unique, not null]
  plan SubscriptionPlan [default: 'FREE', not null]
  status SubscriptionStatus [default: 'ACTIVE', not null]
  periodStart DateTime
  periodEnd DateTime
  cancelAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table WorkspaceInvite {
  id String [pk, note: 'CUID']
  email String [not null]
  workspaceId String [not null]
  invitedBy String [not null]
  token String [unique, not null]
  status InviteStatus [default: 'PENDING', not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

// Relationships
Ref: workspace_members.userId > users.id
Ref: workspace_members.workspaceId > workspaces.id

Ref: roles.workspaceId > workspaces.id

Ref: role_permissions.roleId > roles.id [delete: cascade]
Ref: role_permissions.permissionId > permissions.id [delete: cascade]

Ref: sessions.userId > users.id [delete: cascade]

Ref: brands.workspaceId > workspaces.id [delete: cascade]

Ref: Subscription.workspaceId - workspaces.id

Ref: WorkspaceInvite.workspaceId > workspaces.id
